--- a/index.html
+++ b/index.html
@@ -1,14 +1,77 @@
 <!DOCTYPE html>
-<html> 
+<html>
 
 <head>
     <meta charset=utf-8/>
+    <title>hw-03</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
 
+  <h1>hw-03: Interactive Webpage, and Marks & Channels</h1>
 
+  <!--VISUALIZATION #1-->
+  <div class="flex-container">
+    <!--RIGHT COLUMN-->
+    <div class="col">
+      <img src="img/vis1.png"/>
+    </div>
+    <!--LEFT COLUMN-->
+    <div class="col">
+      <h3>Marks</h3>
+      <ul>
+        <li>abc</li>
+      </ul>
+      <h3>Channels</h3>
+      <ul>
+        <li>abc</li>
+        <ul>
+          <li>def</li>
+        </ul>
+      </ul>
+      <h3>Colormap(s)</h3>
+      <ul>
+        <li>abc</li>
+      </ul>
+    </div>
+  </div>
+  <!--END VISUALIZATION #1-->
+
+  <!--VISUALIZATION #2-->
+  <div class="flex-container">
+    <!--RIGHT COLUMN-->
+    <div class="col">
+      <img src="img/vis2.png"/>
+    </div>
+    <!--LEFT COLUMN-->
+    <div class="col">
+      <h3>Marks</h3>
+      <ul>
+        <li>abc</li>
+      </ul>
+      <h3>Channels</h3>
+      <ul>
+        <li>abc</li>
+        <ul>
+          <li>def</li>
+        </ul>
+      </ul>
+      <h3>Colormap(s)</h3>
+      <ul>
+        <li>abc</li>
+      </ul>
+    </div>
+  </div>
+  <!--END VISUALIZATION #2-->
+
+  <h2>Acknowledgements</h2>
+  <div>
+    <ul>
+      <li></li>
+    </ul>
+  </div>
 </body>
 
 </html>
