added marks and image

--- a/index.html
+++ b/index.html
@@ -22,18 +22,44 @@
     <div class="col">
       <h3>Marks</h3>
       <ul>
-        <li>abc</li>
+        <li>Areas</li>
+        <ul>
+            <li>Total amount of electoral votes; amount each party has out of total</li>
+            <li>Each state represents which party the electoral votes would go to</li>
+            <li>Each electoral vote box represents one electoral vote for either party</li>
+        </ul>
       </ul>
       <h3>Channels</h3>
       <ul>
-        <li>abc</li>
+        <li>Color</li>
         <ul>
-          <li>def</li>
+          <li>State electoral votes representative of corresponding party (red = republican, blue = democratic, red and blue stripes = mixed state)</li>
+        </ul>
+        <li>Positon</li>
+        <ul>
+          <li>Both horizontal and vertical; state locations correspond to US map</li>
+        </ul>
+        <li>Shape</li>
+        <ul>
+          <li>Shape of each dataset is representative of state shape on US map</li>
+          <li>Electoral Votes are represented as squares</li>
+        </ul>
+        <li>Size</li>
+        <ul>
+          <li>Area</li>
+            <ul>
+              <li>Area/size of each state is proportional to size on US map</li>
+              <li>Each electoral vote is the same size</li>
+            </ul>
+          <li>Length</li>
+            <ul>
+                <li>Length of the bar is proportional to how many total votes each party received</li>
+            </ul>
         </ul>
       </ul>
       <h3>Colormap(s)</h3>
       <ul>
-        <li>abc</li>
+        <li>Categorical: Red for republican, Blue for democrat, Red & Blue for mixed state</li>
       </ul>
     </div>
   </div>
@@ -49,27 +75,71 @@
     <div class="col">
       <h3>Marks</h3>
       <ul>
-        <li>abc</li>
+        <li>Points</li>
+        <li>Lines</li>
+        <ul>
+            <li>Each line categorizes the points in that section based on the launch angle</li>
+        </ul>
       </ul>
       <h3>Channels</h3>
       <ul>
-        <li>abc</li>
+        <li>Color</li>
         <ul>
-          <li>def</li>
+          <li>Color is representative of scoring value</li>
+        </ul>
+        <li>Position</li>
+        <ul>
+          <li>Both horizontal and vertical: exit velocity and launch angle</li>
         </ul>
       </ul>
       <h3>Colormap(s)</h3>
       <ul>
-        <li>abc</li>
+        <li>Sequential: Color goes from cool to warm with an increase in scoring value</li>
       </ul>
     </div>
   </div>
-  <!--END VISUALIZATION #2-->
+  <!--END VISUALIZATION #3-->
+
+    <!--VISUALIZATION #3-->
+  <div class="flex-container">
+    <!--RIGHT COLUMN-->
+    <div class="col">
+      <img src="img/vis3.png"/>
+    </div>
+    <!--LEFT COLUMN-->
+    <div class="col">
+      <h3>Marks</h3>
+      <ul>
+        <li>Points</li>
+      </ul>
+      <h3>Channels</h3>
+      <ul>
+        <li>Color</li>
+        <ul>
+          <li>Hue: Red, Green, Blue, Black</li>
+        </ul>
+        <li>Position</li>
+        <ul>
+            <li>Both horizontal and vertical</li>
+        </ul>
+        <li>Shape</li>
+        <ul>
+            <li>Circles, Dashes, Plusses, Asterisks</li>
+        </ul>
+      </ul>
+
+      <h3>Colormap(s)</h3>
+      <ul>
+        <li>Categorical: each dataset has different color</li>
+      </ul>
+    </div>
+  </div>
+  <!--END VISUALIZATION #3-->
 
   <h2>Acknowledgements</h2>
   <div>
     <ul>
-      <li></li>
+      <li>https://www.w3schools.com/howto/howto_css_two_columns.asp</li>
     </ul>
   </div>
 </body>
