--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 
   <h1>hw-03: Interactive Webpage, and Marks & Channels</h1>
 
+  <button type = "button" onClick="buttonClicked()">Click me</button>
+  <div id="buttonDiv">
+    I change color!
+  </div>
+
   <!--VISUALIZATION #1-->
   <div class="flex-container">
     <!--RIGHT COLUMN-->
@@ -98,7 +103,7 @@
       </ul>
     </div>
   </div>
-  <!--END VISUALIZATION #3-->
+  <!--END VISUALIZATION #2-->
 
     <!--VISUALIZATION #3-->
   <div class="flex-container">
@@ -140,8 +145,12 @@
   <div>
     <ul>
       <li>https://www.w3schools.com/howto/howto_css_two_columns.asp</li>
+      <li>https://www.w3schools.com/js/js_if_else.asp</li>
+      <li>https://www.w3schools.com/jsref/prop_style_color.asp</li>
     </ul>
   </div>
+
+  <script src="main.js"></script>
 </body>
 
 </html>
