updated marks and channels

--- a/index.html
+++ b/index.html
@@ -35,26 +35,10 @@
         <ul>
           <li>State electoral votes representative of corresponding party (red = republican, blue = democratic, red and blue stripes = mixed state)</li>
         </ul>
-        <li>Positon</li>
-        <ul>
-          <li>Both horizontal and vertical; state locations correspond to US map</li>
-        </ul>
         <li>Shape</li>
         <ul>
           <li>Shape of each dataset is representative of state shape on US map</li>
           <li>Electoral Votes are represented as squares</li>
-        </ul>
-        <li>Size</li>
-        <ul>
-          <li>Area</li>
-            <ul>
-              <li>Area/size of each state is proportional to size on US map</li>
-              <li>Each electoral vote is the same size</li>
-            </ul>
-          <li>Length</li>
-            <ul>
-                <li>Length of the bar is proportional to how many total votes each party received</li>
-            </ul>
         </ul>
       </ul>
       <h3>Colormap(s)</h3>
@@ -76,10 +60,6 @@
       <h3>Marks</h3>
       <ul>
         <li>Points</li>
-        <li>Lines</li>
-        <ul>
-            <li>Each line categorizes the points in that section based on the launch angle</li>
-        </ul>
       </ul>
       <h3>Channels</h3>
       <ul>
@@ -116,15 +96,15 @@
       <ul>
         <li>Color</li>
         <ul>
-          <li>Hue: Red, Green, Blue, Black</li>
+          <li>Hue: Red, Green, Blue, Black; each color represents a different dataset</li>
         </ul>
         <li>Position</li>
         <ul>
-            <li>Both horizontal and vertical</li>
+            <li>Both horizontal and vertical based on amount of upwelling and date</li>
         </ul>
         <li>Shape</li>
         <ul>
-            <li>Circles, Dashes, Plusses, Asterisks</li>
+            <li>Circles, Dashes, Plusses, Asterisks; each shape represents a different dataset</li>
         </ul>
       </ul>
 
@@ -140,6 +120,7 @@
   <div>
     <ul>
       <li>https://www.w3schools.com/howto/howto_css_two_columns.asp</li>
+      <li>https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2021JC017649</li>
     </ul>
   </div>
 </body>
