--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
       </ul>
       <h3>Colormap(s)</h3>
       <ul>
-        <li>Sequential: Color goes from cool to warm with an increase in scoring value</li>
+        <li>Divergent: Average scoring value is a neautral color with above-Average
+        being a more saturated orange and below-average being more saturated purple.</li>
       </ul>
     </div>
   </div>
