fixed merging error

--- a/index.html
+++ b/index.html
@@ -84,10 +84,8 @@
       </ul>
       <h3>Colormap(s)</h3>
       <ul>
-        <li>Divergent: Color goes from cool to warm with an increase in scoring value</li>
+        <li>Divergent: Average scoring value is a neautral color with above-Average being a more saturated orange and below-average being more saturated purple.</li>
         <li>This is a good choice, as sequential shows the amount of a phenomenon, but this dataset is comparing the extremes (above and below average scoring values). Additionally, there are not different categories for scoring values, so it doesn't make sense to use a categorical color map.</li>
-        <li>Divergent: Average scoring value is a neautral color with above-Average
-        being a more saturated orange and below-average being more saturated purple.</li>
       </ul>
     </div>
   </div>
